--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
@@ -19,7 +20,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^5.0.1"
+    "react-html-parser": "^2.0.2",
+    "styled-components": "^5.0.1",
+    "window": "^4.2.6"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
